Update project configurations and components

--- a/compose.yml
+++ b/compose.yml
@@ -8,8 +8,8 @@ services:
       - database
     environment:
       DB_USER: postgres
-      DB_PWD: postgres
-      DB_HOST: database
+      DB_PWD: 0PsTQlNIx68RaTWfoP31
+      DB_HOST: bia.co1g8my8kjak.us-east-1.rds.amazonaws.com
       DB_PORT: 5432
       ## NAO PRECISA NO BOOTCAMP DAQUI PRA BAIXO ##
       # DB_SECRET_NAME: 
